# cpp-client-api

./: Doxyfile  README.md
include/cps/: CPS_API.hpp  Connection.hpp  Exception.hpp  Protobuf.hpp  Request.hpp  Response.hpp  Socket.hpp  Utils.hpp  Xmldocument.hpp
include/cps/rapidxml/: rapidxml.hpp  rapidxml_iterators.hpp  rapidxml_print.hpp  rapidxml_utils.hpp
include/cps/requests/: AlternativesRequest.hpp  ListFacetsRequest.hpp  ListLastRetrieveFirstRequest.hpp  ListPathsRequest.hpp  ListWordsRequest.hpp  LookupRequest.hpp  ModifyRequest.hpp  RetrieveRequest.hpp  SearchDeleteRequest.hpp  SearchRequest.hpp  ShowHistoryRequest.hpp  SimilarRequest.hpp  StatusRequest.hpp
include/cps/responses/: AlternativesResponse.hpp  ListFacetsResponse.hpp  ListLastRetrieveFirstResponse.hpp  ListPathsResponse.hpp  ListWordsResponse.hpp  LookupResponse.hpp  ModifyResponse.hpp  SearchDeleteResponse.hpp  SearchResponse.hpp  StatusResponse.hpp
samples/: alternatives.cpp  backup.cpp  clear.cpp  delete.cpp  list-facets.cpp  list-last.cpp  list-paths.cpp  list-words.cpp  lookup.cpp  modify.cpp  reindex.cpp  restore.cpp  retrieve.cpp  search-delete.cpp  search.cpp  search_faceted.cpp  similar.cpp  status.cpp
samples/cps3_test/: CMakeLists.txt  README.md
samples/cps3_test/src/: BasicIOTest.cpp  BasicIOTest.hpp  PerformanceTest.cpp  PerformanceTest.hpp  SamplesTest.cpp  SamplesTest.hpp  TestCase.cpp  TestCase.hpp  TestSuite.cpp  TestSuite.hpp  Utils.hpp  main.cpp
